# mcp-analysis-support

./: ANALYSIS_TOOLKIT_SPECIFICATION.md  CLAUDE.md  README.md  pyproject.toml
src/analysis_support/: __init__.py  server.py
src/analysis_support/tools/: __init__.py  mece.py  mshell.py  rbs.py  scamper.py  why_analysis.py
tests/: test_mece.py  test_mshell.py  test_rbs.py  test_scamper.py  test_server.py  test_why_analysis.py
